--- a/politica.html
+++ b/politica.html
@@ -3,51 +3,27 @@
 
 <head>
   <meta charset="UTF-8" />
-  <title>Oscar Barajas Tavares @gndx</title>
+  <title>Politica</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="robots" content="follow, index" />
-  <meta name="description"
-    content="Learning Engineer at @platzi - Microsoft MVP - Lead at Developer Circles from Meta, #JavaScript #React #Web3 #BTC #ETH - #Twitch Partner" />
-  <meta property="og:url" content="https://gndx.github.io/medpet" />
-  <meta property="og:type" content="website" />
-  <meta property="og:site_name" content="Oscar Barajas Tavares" />
-  <meta property="og:description"
-    content="Learning Engineer at @platzi - Microsoft MVP - Lead at Developer Circles from Meta, #JavaScript #React #Web3 #BTC #ETH - #Twitch Partner" />
-  <meta property="og:title" content="Oscar Barajas Tavares" />
-  <meta property="og:image" content="https://arepa.s3.amazonaws.com/og-gndx-dev-avatar.png" />
-  <meta property="og:locale" content="es_ES" />
-  <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:title" content="Oscar Barajas Tavares" />
-  <meta name="twitter:description"
-    content="Learning Engineer at @platzi - Microsoft MVP - Lead at Developer Circles from Meta, #JavaScript #React #Web3 #BTC #ETH - #Twitch Partner" />
-  <meta name="twitter:image" content="https://arepa.s3.amazonaws.com/og-gndx-dev-avatar.png" />
-  <meta name="twitter:site" content="@gndx" />
-  <meta name="twitter:creator" content="@gndx" />
   <link href="favicon.png" rel="icon" type="image/png" />
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
 
 <body class="antialiased text-slate-400 bg-slate-900">
-  <div class="bg-indigo-600 px-4 py-3 text-white">
-    <p class="text-center text-sm font-medium">
-      <a href="https://gndx.dev/mentoria/" target="_blank">
-        🐈 Ultimos Días de descuento en comida premium.
-      </a>
-    </p>
-  </div>
   <div class="flex-block max-w-xl p-4 md:pd-8 mx-auto mt-4">
     <div class="bg-white shadow overflow-hidden rounded-lg">
       <div class="px-4 py-5 sm:px-6 flex justify-between">
         <div>
           <h1 class="text-xl leading-6 font-bold text-gray-900">
-            MedPET 🇨🇴
+            Pansito
           </h1>
           <span class="text-md leading-6 text-gray-500 -mt-1">@medpet</span>
 
           <div class="mt-10 w-full text-gray-700">
-            <h2 class="text-3xl font-bold mb-4 border-b-2 border-gray-300 pb-2">Política de Privacidad de MedPet</h2>
+            <h2 class="text-3xl font-bold mb-4 border-b-2 border-gray-300 pb-2">Política de Privacidad de Pansito</h2>
             <p class="mb-4"><strong>Fecha de entrada en vigor:</strong> [Fecha]</p>
-            <p class="mb-4">MedPet valora su privacidad. Esta Política de Privacidad describe cómo recopilamos, usamos y
+            <p class="mb-4">Pansito valora su privacidad. Esta Política de Privacidad describe cómo recopilamos, usamos y
               compartimos su información cuando utiliza nuestros servicios, incluyendo nuestra interacción a través de
               la API de WhatsApp.</p>
 
@@ -97,13 +73,13 @@
 
         <div class="bg-green-200 px-4 py-5 w-full flex justify-between">
           <a class="text-sm font-bold text-green-600 text-center hover:text-green-800 cursor-pointer"
-            href="https://wa.me/+573041263070/?text=medpet" target="_blank">
-            Atención 24/7 MedPET.
+            href="https://wa.me/+543795306527/?text=medpet" target="_blank">
+            Atención 24/7 Pansito.
           </a>
           <span>💻</span>
         </div>
         <div class="bg-sky-200 px-4 py-5 w-full flex justify-between">
-          <a class="text-sm font-bold text-sky-600 text-center hover:text-sky-800 cursor-pointer" href="https://gndx.github.io/whatsapp-landing/conducta.html"
+          <a class="text-sm font-bold text-sky-600 text-center hover:text-sky-800 cursor-pointer" href="https://jereeg.github.io/whatsapp-landing/conducta.html"
             target="_self">
             Código de Conducta.
           </a>
@@ -111,7 +87,7 @@
         </div>
         <div class="bg-purple-200 px-4 py-5 w-full flex justify-between">
           <a class="text-sm font-bold text-purple-600 text-center hover:text-purple-800 cursor-pointer"
-            href="https://gndx.github.io/whatsapp-landing/politica.html" target="_self">
+            href="https://jereeg.github.io/whatsapp-landing/politica.html" target="_self">
             Política de Privacidad
           </a>
           <span>🚀</span>
@@ -120,7 +96,7 @@
     </div>
   </div>
   <div class="flex-block max-w-xl p-4 md:pd-8 mx-auto text-center">
-    Copyleft © 2024 🚀 Per Aspera Ad Astra
+    Copyleft © 2024 🚀 
   </div>
 </body>
 
