--- a/conducta.html
+++ b/conducta.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8" />
-  <title>Oscar Barajas Tavares @gndx</title>
+  <title>Conducta</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="robots" content="follow, index" />
   <link href="favicon.png" rel="icon" type="image/png" />
@@ -18,12 +18,12 @@
           <h1 class="text-xl leading-6 font-bold text-gray-900">
             Pansito
           </h1>
-          <span class="text-md leading-6 text-gray-500 -mt-1">@medpet</span>
+          <span class="text-md leading-6 text-gray-500 -mt-1">@pansito</span>
 
           <div class="mt-10 w-full text-gray-700">
             <h2 class="text-3xl font-bold mt-10 mb-4 border-b-2 border-gray-300 pb-2">Términos de Servicio de Pansito
             </h2>
-            <p class="mb-4"><strong>Fecha de entrada en vigor:</strong> [Fecha]</p>
+            <p class="mb-4"><strong>Fecha de entrada en vigor:</strong> 04/04/2025</p>
             <p class="mb-4">Bienvenido a Pansito. Al utilizar nuestros servicios, usted acepta cumplir con los siguientes
               Términos de Servicio. Por favor, léalos detenidamente.</p>
 
