--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8" />
-  <title>Oscar Barajas Tavares @gndx</title>
+  <title>Pansito</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="robots" content="follow, index" />
   <link href="favicon.png" rel="icon" type="image/png" />
@@ -18,13 +18,13 @@
           <h1 class="text-xl leading-6 font-bold text-gray-900">
             Pansito
           </h1>
-          <h2 class="text-sm leading-6 text-gray-500 -mt-1">@medpet</h2>
+          <h2 class="text-sm leading-6 text-gray-500 -mt-1">@pansito</h2>
           <p class="mt-1 max-w-3xl text-md text-gray-500 mr-6">
             En Pansito te ofrecemos la gestion de tu tiempo de forma efectiva totalmente online 24/7 por WhatsApp."
           </p>
         </div>
         <div>
-          <img class="rounded-lg w-48" src="https://s3.amazonaws.com/gndx.dev/medpet.png" alt="Oscar Barajas Tavares" />
+          <img class="rounded-lg w-48" src="https://jereeg.github.io/whatsapp-landing/pansito.png" alt="Oscar Barajas Tavares" />
         </div>
       </div>
       <div class="border-t border-gray-200">
