--- a/politica.html
+++ b/politica.html
@@ -18,11 +18,11 @@
           <h1 class="text-xl leading-6 font-bold text-gray-900">
             Pansito
           </h1>
-          <span class="text-md leading-6 text-gray-500 -mt-1">@medpet</span>
+          <span class="text-md leading-6 text-gray-500 -mt-1">@pansito</span>
 
           <div class="mt-10 w-full text-gray-700">
             <h2 class="text-3xl font-bold mb-4 border-b-2 border-gray-300 pb-2">Política de Privacidad de Pansito</h2>
-            <p class="mb-4"><strong>Fecha de entrada en vigor:</strong> [Fecha]</p>
+            <p class="mb-4"><strong>Fecha de entrada en vigor:</strong> 04/04/2025</p>
             <p class="mb-4">Pansito valora su privacidad. Esta Política de Privacidad describe cómo recopilamos, usamos y
               compartimos su información cuando utiliza nuestros servicios, incluyendo nuestra interacción a través de
               la API de WhatsApp.</p>
@@ -73,7 +73,7 @@
 
         <div class="bg-green-200 px-4 py-5 w-full flex justify-between">
           <a class="text-sm font-bold text-green-600 text-center hover:text-green-800 cursor-pointer"
-            href="https://wa.me/+543795306527/?text=medpet" target="_blank">
+            href="https://wa.me/+543795306527/?text=hola" target="_blank">
             Atención 24/7 Pansito.
           </a>
           <span>💻</span>
